--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.password= Eric  v23#
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.springframework.security=DEBUG
+
+spring.security.user.name=eric
+spring.security.user.password=password
+spring.security.user.roles=ADMIN
